@@ -5827,4 +5827,5 @@
 	  SAMA5 RTC driver (2013-10-19).
 	* arch/arm/src/sama5/sam_wdt.c and .h:  Add a SAMA5 watchdog timer
 	  drvier. Untested on initial check-in (2013-10-19).
-
+	* arch/arm/src/sama5/sam_trng.c, sam_trng.h, and chip/sam_trng.h:  Add
+	  a /dev/random driver based on the SAMA5D3 TRNG peripheral (2013-10-20).
